--- a/assets/styles/chat-styles.css
+++ b/assets/styles/chat-styles.css
@@ -57,12 +57,68 @@
   flex-direction: row;
   gap: 10px;
 }
+
+#contain-message-xegure-pending {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+@keyframes ellipsisAnimation {
+  0%,
+  100% {
+    content: ".";
+  }
+  20% {
+    content: "..";
+  }
+  35% {
+    content: "...";
+  }
+  66% {
+    content: "...";
+  }
+}
+
+#contain-message-xegure-pending #bot-message::after {
+  content: "....";
+  display: inline-block;
+  animation: ellipsisAnimation 2s infinite;
+}
+
+#bot-message {
+  font-size: 14px;
+  padding: 17px 20px;
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+  width: auto;
+  max-width: 68% !important;
+  color: rgb(0, 0, 0);
+  background-color: rgb(242, 242, 242);
+  word-wrap: break-word;
+}
+
 #contain-message-user {
   display: flex;
   align-items: flex-end;
   gap: 10px;
   justify-content: flex-end;
 }
+
+#user-message {
+  font-size: 14px;
+  padding: 17px 20px;
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+  width: auto;
+  max-width: 68% !important;
+  background-color: #36363bb8;
+  color: #ffff;
+  word-wrap: break-word;
+}
+
 #contain-image-message {
   border-radius: 100%;
   min-width: 65px;
@@ -78,20 +134,58 @@
   height: 100%;
 }
 
-#chatbot-input {
+#contain-input-chatbot-xegure {
   border-top: 1px solid #ccc;
   padding: 10px;
 }
 
+#input-div-xegure {
+  display: flex;
+  flex-direction: row;
+}
 #input-chatbot-xegure {
   width: 100%;
-  padding: 5px;
+  display: inline-block;
+  font-weight: 500;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 0.305rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s e;
+  background: #f8f9fa;
+  border-style: none;
+  outline: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #send-button {
-  width: 100%;
-  padding: 5px;
-  background-color: #0073e6;
-  color: #fff;
+  width: 30px;
+  display: inline-block;
+  font-weight: 500;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s e;
+  background: #f8f9fa;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+#send-button:hover {
+  transition-duration: 1s;
   cursor: pointer;
+  background: #dedfdf;
 }
